# drift-watch

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  detect.py  registry.py  serve.py  simulate.py  train.py
src/drift_watch/: __init__.py  api.py  cli.py  drift.py  model.py  registry.py  simulator.py
templates/: dashboard.html
tests/: test_detect.py  test_drift.py  test_model.py
